# ubgpsuite

./: .clang-tidy  .gitignore  README.md  meson.build  meson_options.txt
doc/: Doxyfile.in  HISTORY.md  meson.build
doc/css/: custom.css  doxygen-awesome.css
lonetix/: README.md  argv.c  bufio.c  lexer.c  mem.c  mem_file.c  numlib_atof.c  numlib_atoi.c  numlib_fltp.h  numlib_ftoa.c  numlib_itoa.c  smallbytecopy.h  stm.c  stricmp.c  strncatz.c  strncpyz.c  strnicmp.c
lonetix/bgp/: attribute.c  bgp.c  bgp_local.h  bytebuf.c  dump.c  dump_isolario.c  mrt.c  parameters.c  patricia.c  prefix.c  vm.c  vm_asmtch.c  vm_cdef.h  vm_commsort.h  vm_communities.c  vm_dump.c  vm_gccdef.h  vm_optab.h
lonetix/cpr/: bzip2.c  flate.c  xz.c
lonetix/include/df/: argv.h  bufio.h  chkint.h  lexer.h  mem.h  mem_file.h  numlib.h  srcloc.h  stm.h  strlib.h  xpt.h
lonetix/include/df/bgp/: asn.h  bgp.h  bytebuf.h  dump.h  mrt.h  patricia.h  prefix.h  vm.h  vmintrin.h
lonetix/include/df/cpr/: bzip2.h  flate.h  xz.h
lonetix/include/df/sys/: con.h  dbg.h  endian.h  fs.h  fsdef.h  interlocked.h  interlocked_intrin_msvc.h  interlocked_ops_gcc.h  ip.h  sys.h  vt100.h
lonetix/include/df/utf/: utf.h  utfdef.h
lonetix/sys/: con_unix.c  con_windows.c  dbg_unix.c  dbg_windows.c  fs_common.c  fs_unix.c  fs_windows.c  ip_common.c  ip_unix.c  ip_windows.c  sys_common.c  sys_local.h  sys_unix.c
lonetix/utf/: rune.c  runetype.c  utflen.c  utfrrune.c  utfrune.c  utfutf.c
tools/bgpgrep/: bgpgrep.1.in  bgpgrep.c  bgpgrep_asmatch.c  bgpgrep_communities.c  bgpgrep_compile.c  bgpgrep_dump.c  bgpgrep_local.h  bgpgrep_peer.c  bgpgrep_prefixlist.c  bgpgrep_timestamp.c  bgpgrep_vmfunc.c
tools/bgpscanner/: bgpscanner  bgpscanner.1.in
tools/peerindex/: peerindex.1.in  peerindex.c  peerindex_local.h
